# wxlame

./: CMakeLists.txt  README.md  makefile
.github/workflows/: main.yml
debian/: changelog  control  copyright
debian/menu/: app.desktop  wxlame.desktop
doc/: CHANGELOG.md  README  README.md
docs/: CHANGELOG  README
msg/: cs.po  de.po  en_template.pot  es.po  pt_BR.po  ru.po  template.po  tr.po
packaging/debian/: changelog  copyright
packaging/debian/menu/: wxlame.desktop
packaging/windows/: README.md  installer.iss  installer.iss.in
po/: cs.po  en_template.pot
src/: AppSettings.cpp  AppSettings.hpp  Application.cpp  Application.h  ConfigBase.cpp  ConfigBase.hpp  Constants.h  Constants.hpp  Constants.hpp.in  DndFile.cpp  DndFile.h  DndFile.hpp  FileData.cpp  FileData.hpp  FileDrop.cpp  FileDrop.hpp  FileInfo.cpp  FileInfo.h  FileListManager.cpp  FileListManager.h  FileListManager.hpp  Gui.cpp  Gui.fbp  Gui.h  GuiDialogProgress.cpp  GuiDialogProgress.h  GuiDialogProgress.hpp  GuiDialogSettings.cpp  GuiDialogSettings.h  GuiDialogSettings.hpp  GuiFrameMain.cpp  GuiFrameMain.h  GuiFrameMain.hpp  GuiMain.cpp  GuiMain.h  GuiProgress.cpp  GuiProgress.h  GuiSettings.cpp  ListCtrlManager.cpp  ListCtrlManager.hpp  (+4 more)
src/ui/: Gui.cpp  Gui.fbp  Gui.h  GuiDialogProgress.cpp  GuiDialogProgress.hpp  GuiDialogSettings.cpp  GuiDialogSettings.hpp  GuiFrameMain.cpp  GuiFrameMain.hpp
windows/: README.md  build-binaries.cmd  build-installer.iss  installer.iss
wxlame/: CMakeLists.txt  makefile  wxLame_Linux.cbp  wxLame_Windows.cbp  wxlame
wxlame/debian/: changelog  control  copyright  rules
wxlame/debian/menu/: icon.xpm  wxlame
wxlame/docs/: CHANGELOG  README
wxlame/msg/: cs.po  de.po  es.po  pt.po  pt_BR.po  ru.po  template.po  wxlame.po
wxlame/resource/msg/cs/: wxlame.mo
wxlame/resource/msg/de/: wxlame.mo
wxlame/resource/msg/es/: wxlame.mo
wxlame/resource/msg/pt_BR/: wxlame.mo
wxlame/resource/msg/ru/: wxlame.mo
wxlame/src/: Application.cpp  Application.h  ConfigBase.cpp  ConfigBase.h  Constants.h  DndFile.cpp  DndFile.h  FileInfo.cpp  FileInfo.h  FileListManager.cpp  FileListManager.h  Global.h  Gui.cpp  Gui.fbp  Gui.h  GuiMain.cpp  GuiMain.h  GuiProgress.cpp  GuiProgress.h  GuiSettings.cpp  GuiSettings.h  frmAbout.cpp  frmAbout.h  frmMain.cpp  frmMain.h  frmProgress.cpp  frmProgress.h  frmSettings.cpp  frmSettings.h  wxLameApp.cpp  wxLameApp.h
wxlame/wxsmith/: frmMain.wxs  frmProgress.wxs  frmSettings.wxs
